infrastructure/kubernetes/demo/azure/dependency-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-firefusion-to-runtime-dependencies
  namespace: firefusion
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: firefusion-api

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: broker
      ports:
        - protocol: TCP
          port: 5672

    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cache
      ports:
        - protocol: TCP
          port: 6379

    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: relational-db
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-model-to-broker
  namespace: firefusion
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: model-api

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: broker
      ports:
        - protocol: TCP
          port: 5672

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-aggregator-to-runtime-dependencies
  namespace: firefusion
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: aggregator-api

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: broker
      ports:
        - protocol: TCP
          port: 5672

    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: relational-db
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-runtime-dependency-ingress
  namespace: firefusion
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - broker
          - cache
          - relational-db

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - firefusion-api
                  - model-api
                  - aggregator-api

      ports:
        - protocol: TCP
          port: 5672

        - protocol: TCP
          port: 6379

        - protocol: TCP
          port: 5432
